--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -59,6 +59,13 @@ h3
   bottom: 300px;
 }
 
+.skill-row
+{
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+}
+
 .footer-link
 {
   color: #11999E;
