--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -170,3 +170,11 @@ a:hover
 {
   color: #EAF6F6;
 }
+
+footer {
+  margin-top: 5%;
+  color: #EEEEEE;
+  text-align: center;
+  font-family: 'Indie Flower', cursive;
+
+}
