--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -176,5 +176,6 @@ footer {
   color: #EEEEEE;
   text-align: center;
   font-family: 'Indie Flower', cursive;
-
+  background-color: #66BFBF;
+  padding: 50px 0 20px;
 }
