--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -176,6 +176,10 @@ footer {
   color: #EEEEEE;
   text-align: center;
   font-family: 'Indie Flower', cursive;
+
+}
+
+.row{
   background-color: #66BFBF;
   padding: 50px 0 20px;
 }
